fix images not showing on project cards

--- a/src/components/ProjectCard/ProjectCard.modules.scss
+++ b/src/components/ProjectCard/ProjectCard.modules.scss
@@ -1,20 +1,40 @@
 @use "../../partials/devices";
 @import "../../partials/palette";
 
-.ProjectCard {
+.card {
   height: 300px;
-  // max-width: 96%;
+  max-width: 96%;
   background-color: $white;
   margin: 10px;
   border-radius: 8px;
+  position: relative;
+  overflow: hidden;
+
+  &__img {
+    position: absolute;
+    width: 100%;
+    z-index: 1;
+    // visibility: hidden;
+    // height: 120px;
+    left: 0;
+  }
+
+  &__bottom {
+    z-index: 4;
+    width: 100%;
+    // height: 50%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-bottom: 10px;
+    background-color: rgba($darkDarkGrey, 0.9);
+    & h3,
+    p {
+      color: white;
+    }
+  }
 
   @include devices.phone {
     width: 96%;
   }
-}
-
-.img {
-  width: 101%;
-  height: 120px;
-  left: 50%;
 }
